# cs61c

./: README.md
cs61cproj1/: CMakeLists.txt  MY.PARTNERS  part1.c  part2.c  riscv  types.h  utils.c
cs61cproj1/riscv.dSYM/Contents/Resources/DWARF/: riscv
